# tiered-model-router

./: .gitignore  README.md  pyproject.toml
artifacts/v0/: eval.json
artifacts/v1/: eval.json
docs/: phase1-research.md
docs/plans/: 2026-07-19-phase2-router-v0.md
scripts/: diagnose_v0.py  eval_v0.py  eval_v1.py  generate_labels.py  prepare_data.py  prepare_golden_prompts.py  prepare_main_prompts.py  prepare_probe_prompts.py  train_v0.py  train_v1.py
src/router/: anthropic_client.py  elo.py  embed.py  evaluate.py  grade.py  labels.py  openrouter.py
tests/: test_elo.py  test_grade.py  test_grade_math.py  test_labels.py
