[project]
name = "tiered-model-router"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "datasets>=5.0.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "matplotlib>=3.11.1",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/router"]

[tool.pytest.ini_options]
testpaths = ["tests"]
